*SVN*

* Improve Test Coverage for ActionController::Routing::Route#matches_controller_and_action? (Heckle++) #7115 [Kevin Clark]

* Heckling ActionController::Resources::Resource revealed that set_prefixes didn't break when :name_prefix was munged. #7081 [Kevin Clark]

* Fix #distance_of_time_in_words to report accurately against the Duration class.  #7114 [eventualbuddha]

* Refactor #form_tag to allow easy extending.  [Rick]

* Update to Prototype 1.5.0. [Sam Stephenson]

* RecordInvalid, RecordNotSaved => 422 Unprocessable Entity, StaleObjectError => 409 Conflict.  #7097 [dkubb]

* Allow fields_for to be nested inside form_for, so that the name and id get properly constructed [Jamis Buck]

* Allow inGroupsOf and eachSlice to be called through rjs. #7046 [Cody Fauser]

* Allow exempt_from_layout :rhtml.  #6742, #7026 [dcmanges, Squeegy]

* Recognize the .txt extension as Mime::TEXT [Rick]

* Fix parsing of array[] CGI parameters so extra empty values aren't included.  #6252 [Nicholas Seckar, aiwilliams, brentrowland]

* link_to_unless_current works with full URLs as well as paths.  #6891 [Jarkko Laine, manfred, idrifter]

* Lookup the mime type for #auto_discovery_link_tag in the Mime::Type class.  Closes #6941 [Josh Peek]

* Fix bug where nested resources ignore a parent singleton parent's path prefix.  Closes #6940 [Dan Kubb]

* Fix no method error with error_messages_on.  Closes #6935 [nik.wakelin Koz]

* Slight doc tweak to the ActionView::Helpers::PrototypeHelper#replace docs.  Closes #6922 [Steven Bristol]

* Slight doc tweak to #prepend_filter.  Closes #6493 [Jeremy Voorhis]

* Add more extensive documentation to the AssetTagHelper.  Closes #6452 [Bob Silva]

* Clean up multiple calls to #stringify_keys in TagHelper, add better documentation and testing for TagHelper.  Closes #6394 [Bob Silva]

* [DOCS] fix reference to ActionController::Macros::AutoComplete for #text_field_with_auto_complete. Closes #2578 [Jan Prill]
