@@ -1,5 +1,7 @@
 *SVN*
 
+* Modernize cookie testing code, and increase coverage (Heckle++) #7101 [Kevin Clark]
+
 * Improve Test Coverage for ActionController::Routing::Route#matches_controller_and_action? (Heckle++) #7115 [Kevin Clark]
 
 * Heckling ActionController::Resources::Resource revealed that set_prefixes didn't break when :name_prefix was munged. #7081 [Kevin Clark]
